# fantasy-football-metrics-weekly-report

./: .dockerignore  .gitattributes  .gitignore  .ruff.toml  .travis.yml  .venv  DEPLOYMENT.md  Dockerfile  EXAMPLE-config.ini  Makefile  README.md  RELEASE.md  backup_time_series_data.py  badboystats.py  chart_generator.py  clear_old_json_data.py  compose.build.yaml  compose.dev.yaml  compose.yaml  config.ini  config.template.ini  config.yaml  crimecatsscoring.csv  dev-requirements.txt  docker-compose.yml  fantasy_football_report.py  fantasy_football_report_builder.py  fetch-data.py  generate_report.py  google_drive_uploader.py  line_chart_generator.py  main.py  metrics.py  original_fantasy_football_report_builder.py  pdf_generator.py  pie_chart_generator.py  pyproject.toml  quickstart.py  report_generator.py  requirements-dev.txt  (+5 more)
api/: api.py
calculate/: bad_boy_stats.py  badboystats.py  beef_rank.py  beef_stats.py  breakdown.py  coaching_efficiency.py  covid_risk.py  metrics.py  playoff_probabilities.py  points_by_position.py  power_ranking.py  season_averages.py  z_score.py
dao/: __init__.py  base.py  cbs.py  espn.py  fleaflicker.py  nfl.py  sleeper.py  utils.py  yahoo.py
data/: retrieve.py
docker/: DEPLOYMENT.md  Dockerfile  docker-entrypoint.sh
features/: bad_boy.py  beef.py  high_roller.py
integrations/: discord.py  drive.py  drive_integration.py  groupme.py  slack.py  slack_integration.py
legacy_code/: backup_time_series_data.py  original_fantasy_football_report_builder.py
python-yql-master/: .travis.yml  CHANGELOG  TODO  requirements.txt  setup.py
(+133 files in other folders)
